Set number values of getting TRANSFORM_FEEDBACK_BUFFER_MODE

BUG=598624
TEST=deqp/functional/gles3/shaderstatequery.html
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1844113003

Cr-Commit-Position: refs/heads/master@{#385613}

Former-commit-id: 5247589044b9e2a51cf350577dc6df459958d7f4