gpu/command_buffer/common/gles2_cmd_utils.cc
@@ -216,11 +216,13 @@ int GLES2Util::GLGetNumValuesReturned(int id) const {
       return 1;
     case GL_TRANSFORM_FEEDBACK_BUFFER_BINDING:
       return 1;
-    case GL_UNIFORM_BUFFER_BINDING:
+    case GL_TRANSFORM_FEEDBACK_BUFFER_MODE:
       return 1;
     case GL_TRANSFORM_FEEDBACK_BUFFER_SIZE:
       return 1;
     case GL_TRANSFORM_FEEDBACK_BUFFER_START:
+      return 1;
+    case GL_UNIFORM_BUFFER_BINDING:
       return 1;
     case GL_UNIFORM_BUFFER_SIZE:
       return 1;
